k3s/mongo.yaml
---
# 5. Deployment (or StatefulSet for prod)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:8.0.9
          # pull env from ConfigMap + Secret
          volumeMounts:
            # data directory
            - name: datadir
              mountPath: /data/db
            # init script
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d/init-mongo.sh
              subPath: init-mongo.sh
              readOnly: true
      volumes:
        - name: datadir
          persistentVolumeClaim:
            claimName: mongo-pvc
        - name: init-script
          configMap:
            name: mongo-init-script
            defaultMode: 0755

---
# 6. Expose with a Service
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
