k3s/threesixty.yaml
---
# threesixty-admin Deployment & Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: threesixty-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: threesixty-admin
  template:
    metadata:
      labels:
        app: threesixty-admin
    spec:
      imagePullSecrets:
        - name: ecr-registry-secret
      containers:
        - name: threesixty-admin
          image: 782396859527.dkr.ecr.ap-southeast-2.amazonaws.com/objective3sixty:5.0.2-RC1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: threesixty-admin
spec:
  type: ClusterIP
  selector:
    app: threesixty-admin
  ports:
    - port: 8080
      targetPort: 8080

---
# threesixty-discovery Deployment & Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: threesixty-discovery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: threesixty-discovery
  template:
    metadata:
      labels:
        app: threesixty-discovery
    spec:
      imagePullSecrets:
        - name: ecr-registry-secret
      containers:
        - name: threesixty-discovery
          image: 782396859527.dkr.ecr.ap-southeast-2.amazonaws.com/objective3sixtydiscovery:5.0.2-RC1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: threesixty-discovery
spec:
  type: ClusterIP
  selector:
    app: threesixty-discovery
  ports:
    - port: 8080
      targetPort: 8080


---
# RabbitMQ Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:4.1-management
          ports:
            - containerPort: 5672    # AMQP
            - containerPort: 15672   # HTTP management
---
# RabbitMQ Service
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672

---
# SCIM server Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scim-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scim-server
  template:
    metadata:
      labels:
        app: scim-server
    spec:
      imagePullSecrets:
        - name: ecr-registry-secret
      containers:
        - name: scim-server
          image: 782396859527.dkr.ecr.ap-southeast-2.amazonaws.com/objectivescimserver:1.0.5
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
---
# SCIM server Service
apiVersion: v1
kind: Service
metadata:
  name: scim-server
spec:
  type: ClusterIP
  selector:
    app: scim-server
  ports:
    - port: 8083
      targetPort: 8083

---
# nginx-proxy Deployment & Service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: threesixty-ingress
  annotations:
    # tell Traefik to enable HTTPS on this Ingress
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - localhost
      secretName: nginx-tls

  rules:
    - http:
        paths:
          - path: /3sixty-admin
            pathType: Prefix
            backend:
              service:
                name: threesixty-admin
                port:
                  number: 8080
          - path: /3sixty-discovery
            pathType: Prefix
            backend:
              service:
                name: threesixty-discovery
                port:
                  number: 8080
          - path: /scim/v2
            pathType: Prefix
            backend:
              service:
                name: scim-server
                port:
                  number: 8083
